crates/core/runner/tests/snapshots/dep_graph_old_test__sync_project__avoids_dupe_projects.snap
---
source: crates/core/runner/tests/dep_graph_old_test.rs
assertion_line: 544
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SyncNodeProject(advanced)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
}

