crates/core/runner/tests/snapshots/dep_graph_old_test__sync_project__isolated_projects.snap
---
source: crates/core/runner/tests/dep_graph_old_test.rs
assertion_line: 450
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SyncNodeProject(advanced)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SetupSystemTool" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="SyncSystemProject(noConfig)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncSystemProject(emptyConfig)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
    2 -> 4 [ arrowhead=box, arrowtail=box]
    5 -> 3 [ arrowhead=box, arrowtail=box]
}

